<resources>
    <string name="app_name">Wiktoria_Buko</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Task1</string>
    <string name="menu_gallery">Task2</string>
    <string name="menu_slideshow">Task3</string>
    <string name="My_name">Wiktoria Buko</string>
    <string name="Github_Link">https://github.com/Diavolo-v/mobilki</string>
    <string name="photo_link">data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBxASEhUSExMVFhUXFhcXGRcXFxoXFRgXFRUWFhUYGhkYHSggGholHRYYIjEhJSkrLi4uFx8zODUtNygtLisBCgoKDg0OGxAQGy0mHyUtLTUtLS8vLzUrMC0tLS0tNS0tKy0tKy8tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLf/AABEIAL4BCQMBIgACEQEDEQH/xAAcAAABBQEBAQAAAAAAAAAAAAAAAQIEBQYDBwj/xABHEAABAwIDBQYCBwYEAwkBAAABAAIRAyEEEjEFQVFhcQYiMoGRsROhB0JSwdHh8BRicoKS8SOTorIzU3MXQ1SDo7PCw9IV/8QAGgEBAAMBAQEAAAAAAAAAAAAAAAEDBAIFBv/EACoRAAICAgICAAcAAgMBAAAAAAABAgMRIRIxBEETIlFhcYHwMsEVkaEU/9oADAMBAAIRAxEAPwDxKt4ndT7pifW8Tup90xAIhCEAqVIlQAhCVACEIQAhCEABCVmo6j3Shl4/VtUA1CUXSEoAQhK0X/W66AQoQlhAInNbKRdagyiN51QHJyVosT5DqfyTYXXECDl+zY/xfW/DyQHJOawm+g4nT813fQFPx+L7HDhn4fw69FwqPJMn8hyA3BAJI3ep/BIhCAEiVIgBCEIAQhCAdW8Tup90xPreJ3U+6YgEQlQgAJyQJUAIQhACEIQAhCEAKS9v+IDueAR1cIP+qR5KOApdNhdTMeKmcw4lh8Q/lMO6F53ICNS+9o9z9yQNvHkrY7KqPDn0mlzXND2gXNzcQOHfb1aVW4imQ5wNt/rce6A5QulNtnHgAPUj7pTqjZd/EJ8zr8wV0j/DfGgcwf7/AMEBF3KQ7D5bvMcAPEfw81IwlENZ8ZwkAhrB9p5uT0aBPUhJRpkk1H94kiBxLvCPP2BKAaGtYM0QYsJkgHQnmd3KTwUNxkypGMffLM7yeJOp6bhyAUZAScG2JqfZgN5vd4R5Xd/KptamMJY3xJ1m4oTu51v9v8XhtBTGDw9OsQPjOk0QQe7UcA6pWINv8Nppsb++Xn6iyrnEkkmSbknUlT0c9iEzcpQE+lSJvo0ancPxPJHiIa0G5AAF3E7rD2UHRzKArB+zhT/478h/5bYdV3eITFP+YzyK4uxkWpt+GNJnM89Xn/4gBTgjJydQy+O37v1vPh5rm4+SRCgkRCdkPTqkIQCIQhAOreJ3U+6Yn1vE7qfdMQAhPpUnPIa1pcToACSfILR4XsBtSoMzcP5OqUmHlZ7wUBmglWlxH0f7WYJOEqEfulr/APY4qhxeDq0nZarHsdwe0tNuqA4IQhACVCVrSdBKAalAlPNJ3ArRdnOzNXEQWND+LTY9QTEjiASeShtLslJsrtk7Oe892QdLtlpncRvngbr0nsn2LY9zXvbkIF4OenfUXu0GdD6b1pdg9n8PhmB1RsOHH6vLmPwFpV43F0BEQ3gQAPLdPqsNvlYeEa6/HydNl9isFTbYAkExmuId9UzxvPGTK67R7C4DHAtr4bK5vhqMOV8E7zv853qA74b5cXVIjWQ0T5XU7C7WdSYBTJIjiX+5Krj5e8vr+/uyyXiYWu/7+6KKr9DWBaRldVgEkd4Hgbd2Red+9Rf+x/Z7aTg6piGtJBLnOZ9Xf4IGpC3WD2hWeA7MSOAbB/1XUqpSEhxvOpeScvHkFpUnJZjn9mZx4vEsHl2L+i7D1GU/gvxD2MHd7rcrpIBJJHKbfekwv0fUaJAqUqj3CTmeCWku1JDQBMWv+K9bGVze4Mw8QM2kXFwdF0w76kw4NjcQSSOOvNQ65y1yf6O42xjviv3/AH+jzfC9ndnOBY+hRgazTbPlaR1Cynaj6LaDH0K2Ec4031WtfRcZIBBPcdqQQ0iDe+q94rU2O8QB6gFQNobPZUaWFzmhwc0ObGZhc0gOaSCA4TIkFTVROt95RNt0LVqOH/fY+Ve2WPFfF1MhmnTPwqcaFrCZcI+28vf/ADlQMPgLZ6khsSBpPOTo3nv3Lf7U+j7FYPEGm9xrgkmjctpFjRJqVpIDQ3e2b7yGyVQ4naVOlUyYQHE4ou/4+XO1rouaDI7793xHCwHca3xHWYvsV9bZWUNfin/s9OJZSDZxDwZu2lIygx43kDhmUSttcNBZhmfBboXTmrvFvFVgQLeFgaOIKk1+zuMk1MSW0S6SXYmoGVCd5LDNVx/lKjOw+Dp+KtUrGNKTfhsn/qVJd/6akaKtdzhHi7u4P3rE9G6n0Ul+0iP+DTbSHFsuqf5jpI/lyqA5xJkmSd5uVBI85Bxd/pH4+yaah6dLfmmoUEgkSpEAIQhAOreJ3U+6Yn1vE7qfdMQG6+jmk2XP0eLA6HjC3dPGFp05fq685+jY5sQWSQcuZuurdRAsbcV6pjcIdSJ6Kmae8GivjrJJ2djgTp5d4x6fcSrUvNVpa406jfsPaKgg7jm3LLUae75cPRaDAQALADQC/qY1PJVxbfZbOMV0Vu1Ow+ysSe/Q+C+NaLsvq27ellT436GcO8E4fEuB3Co0FpPDM3T0MTwhegsZaBPm0E+TSYjyK4Yqq+nJDXRvIaI9BC7cmilQUujyfEfQzjw6GupOH2g+Bq3UG+hP9POxsj6M8Wyplq2uIaRa41Bg3Fxu6gL1nBbdBt0niNylYvGE7jfhB+Wqq+Ozt+O12ZPBdjaLGZMQwOvAdN+V95HPhqZVrh9l4bDtmm24vmi9ue/zXTG43MIcAYm+hHUfroqXF4wvMAERrBjyv9yxWX4bNVdGcEDtJtgD1gTun5lcMPjBUAAfDRF2yD8z8uap8XQfWqZWtcA28943Jj6q1GyuxNhUrfEyjRoqFpPOQ4W81TCnn+TbOyNMSVgaWZpdUDvhjwtIAJ4k5h8lM7PzVcTSGSmCe8Jgn5/JUe2awe5uFpuIG+Mzz6tB9brTbCo0sPTaBmc8/WeQTz0stdVUXL7IxXWtQ+79fRGgo5jBkQOLSGnoTqPkoeK2g6X5TmMEhrSwiNxNzPom4iv3c0SfQ9TN45LL18K92aoXFrTq4mAd0AE/NbJZWkYoJPbNPSx2IcG90UwaYdckkOi/KOSscNXaXAF19OF4v6/cstVxImm0F5YaIAEw2DZxJ+1IN5m3NPftynh7PIlzgARc2AEvjeARJ1Up4Z3x5LCRrsbjWMbJMddeltVltp9r2NcGuY9kGZc0gAQ6HOn6pIi06pnarZtY06eKp1HOyEFws7LJkPbpIFp5X4qFgcT+1zSrOZUNUFploFpncBxXUpt/Yt8eEI/M9/6NJtPD0dqbPc0tzhzQ4NJcAS0hwBLCHRIFgV5a/sVth7XMpP8A2Sj9mjSbQputHecyoaj/APzCSvRexeEq4NlbD1bCnJaZJBYZyOBGsj5yF5F2q7N4qq91StRqPu5wyYi4bPicytny9A4dBusrbcVkxXxjGxqL16ONT6L3MJNXFM/kp1Hu56NKhVex1Fly7GP/AOngKs/1VXNb8lncZsg05Lm12DjUoFrf6g4z1hV5ocLjiA77wF3+ivf1L/G7Kw7P+62gf46Laf8A+oVTVfhwY+FWH8VVs/8AsrnTxtZnhqVG9HuHsV1//r4r/wARW/zH/io0Ts4OfR3Mqf5jT/8AWmk0+Dx5h3yyhdztSuRDqhcP34f/ALwVyOKdvbT/AMtg9gEAz4c+Eg8tD6Gx8iVzXU1/3Wf0pjnzuHkAFBIxCEIB1bxO6n3TE+t4ndT7piAkbPxj6NRtVhhzDIK+i+zmNp4zDNqMM5hMbwR4geBBXzYtp9GnaoYKvkqOilUNzua7QE8jofVQ/qdxfo9XrsyEmPRMwuKc51rAau/v7DVXmIoMrNzMgyJjkdI4hZzH0cvdMgakcevJcOOdoui/TNLh8Y5wimLfaJgeZ1J8k7G0pBzVXjiGa9CSCB8liH9qDTItIFoBDW2jQQV3odtGvGUUWVCNb5Bfm4yuXhonhKLyTmjLVAg/x1HEACbgkQrx07qlN1tA517bpsfNZej2gYCB8E09+jTc8I1CuWbWcRvPrH9JXn2SVecmpKU8YI+0KhabwDwJ/Ae0KrxO0gxhhpc/gbC+huOXFd9o1Q4y1wABgjT0vMqBR2ViK7w8slgNs+Yz5HVYv82boxUFstuy1N5a3O1rS5xPddJIHExHlJKstubUeCKLO851p3ieUAp1Km6iwvJY0xGh6C8zHoE3s3gpccQ8U3ncQCTHK/3LZFPKgtfX8GNuLzbL9fkn7H2Q2kyQdRcvbJ+Ue6sxgcxBmQBAEKRRxoccobfgSLc7SrBrba+i9GuMWtdHm2SlnL7KrHsDG6DkN/nyWRxmLAM1CDPhESGi/qdY5Cd4Wp25Wa0QBJPFYyrTa+qwOIDSSJJiTZc2MuphrLEpYuriGvptGUMBc06nQy3qbERwWMZiXfWOYHUElt+M8b681bYjaFWlWqPY4i7mkiIgd0W00Auq7Gublc4mNCevEdVy00t9muEd66NP2Q7V/BP7NUD6tF8tLTdzQ6QY4t/Vllsc2vSxYZQqPZkMgg94zMTqNItorPsmwNd+1OdmY1sugXEbuqnvaKbcRjYsCXNB+04nLryGihPnoSca22uvf5Lrtvt0u2aWOez9pinnphwD303uyksGpOhgb7bxPhzNsYzDZfg4h4ZMtIdLDbRzD3S4TvHyhTNqbZdXa6rMvY7MZv3H90x+7JbIje7iFT4qsHTVZAzmKlM6ZtZHI3O4gzC19I8p7Zc0O1bKhP7TRGY2NfDH4Ffm5wb3Kh0sQPmuOM2VUqtdVwuIdiWAS5hJGIYNe9TJ7wFpc2RMrOJ9Gq5jg5ri1wMhzSQ4HiCLgqckYGkpFeCvSxLHGsC2s0y6rTaJcwm7307B5BMEtyuh2Y5oKrMXgnUwHWcw+Gowyw8p1Dv3XAEcFBJGQhCAEiVIUAIQhAOreJ3U+6YulbxO6n3XNACVIlQGn7K9t8VgoaD8Sl/y3E2H7rtW9NF63sbtTgsezKHBlQi9OpF/4To7yuvn0LvhsQWHiOB0XEo+0W1zS1I95xfYwVmF1NwnhNpG6SsXU2XicNUJewhoMTvE7xxH5KJ2Y7c1sOx7WEAP3OJOU6S3X09l0o9qq9Spke91Vr7Q4k637s3Czysa9G2NXLL5LHo0GDezJnLZH1RBjrG7y9F0oVnBpqFh4jvGeoA+8qpbUOYMLmsaLRdzo/hbp/NCsqGIBdlDJa0WNR5gdGMmP5iVguTk9mmrCWids3CPquGdwyneTJdO6JM+a2gZTw7c1QsaIkD9R8gFlaG1abKZFWpUeTuAa1nQNb3T5yquhhq1ep/hiGT9eR8gHD5BE4w6WWQ4yty5PEUXdfFvxlTKxjgwGczgSw35wSFr8LTaGfDNRkwO62wA5qBsbZ7my1/wxOmVt/MkBT62wfrCoSde9EfJaIQnFZxlvsy2WQk1HOEuiTszBBpJBF+G/wA1akEAqBskuFnayfyCn4ow0nkVuojFQ+UxWtuezE9ocblzPOjNOu5YCvjXGTqXEz6rX9te7h5nV4b11J9lhKZkiFGMM9KqK4napXAFwAFT4zGNnKAYnh5R0VvWAcRwG/ceil1tgnIKmURpz69F2686Ic+Ozh2e2i0UalBjTNRwF9zbExzkR0K0X0gP+Bslpy919Zmbk0TB9QPVUfZfY5/aX7w2PUrT/TdSLNl0o+rUaCORaQf1z6EVVQamyny5rikvZ4HSqfCqchIO+WOsbcwVycYJERuI3fP5Jrnk67kjjN/1b8leYREIQgOlCsWODhqNx0I0II3tIkEbwSpb6hpOzU706gnK7vNIBvTeDqWm066OESFAUjDVhBY+chM21a7c4exG8c4IAfVotcC+naLupm5aOIP1mc9Rv4mIuz2PpuBBg6tc02I4tPD+xSuAfcCHb2jQ82jd/D6cABwSJUiAEIQgH1vE7qfdMT63id1PumIAQhAQCoAQhATMKwQZv0/FWuxcYWuMWMbvx1VXgryFLoiDKos9o1VdJmkwbgJJifT5kK4wLabYIeROt4HlCzeHq1CO5I8lbYLCz3nmTw71z6T8l51iPUraxgvH121Glo+G7m0AnzyxdLsLYb21A8Vh/C0PzRrrqPIrphaeIIAbTeN3ey5fV5Cc/A1GiamGfE/VgefdVUecXnGiW4SXFM3+zq9QQCWkxElwAPlJM9V2r4yrTqMBu0nvACZ6EAX+SyOydq0WEU+9TtoQY8yZ+a2WExAqNhxDo3tv5QG2W2FinpPZ51lTg8taLihktG/dyOi6VrtPRRsO8E2BHUb1NbcLfDowvs867d4QnDiIEVG6mOO/zWAbhawdl+G8zezSRHIixXqf0h4XNg6h0yOa6eUwD815/wBmttZT8KpcHTlJHzifVcPEXs9rxoO2t8ezjTqtALHtc05TAIINt8HctZsnL+ztcbksvw1t5ro/CteMjwHt1EjqNdx6LjVwT6TadNklhOUE7ryAf1uVqeHkrlDksfctey2zMuZ8eNwd6BQvp4eG4Bgyhw+IJHItNpGh1M6SFt9l4EsptHRVH0o9mzjsBUpsj4jIqMkxJZMtsDqCR1K5imkedfNSkfKtZgFwZB0nXoeaYnOkSDaDodQdD+uSapKgQhCAEIQgHtqEDLumY3Tx5HmEyUJEA575M/o801CEAIQhAPreJ3U+6Yn1fE7qfdMQAgIQEAqAhAQE7AglTJCTZ9F0aXK6vo8f7rNN7NdaxEn4HaAFgHDoR+Eq9wGDY6Dmdfddg8zdZ3BAbmyeNyB5BTjVce7OXhaJ9FlsX0NtbytnoGBoU2DLLZ/i73rllXlHC0nmGvkxpna4jyLQ8eR8l5Y1lXXNJmxHiPHr01Uqm55hzSQ4fP8AAxuKoy19Cz4MXtNnqFDZQNn6z3ZEHpMD8+Kk09ltF2EsdE909233eywOxu0WIpjvkvbuBMwRuvuMadDK22yu0tOpq2CL+v3/AIFdwlV1JFFld0dp5LHD1sSxwz94GLxceXVXmAqyN99/VccPUZUaC0zZSAyCD9UjyB/st9S49PKPPsly7WGdMVRBFwCLgg3BadQRvXhfbzszUwVZ1ZoH7NUqH4bg4WLgX5C2ZEQb6QBde85rfiq7GYdp8VNtRoIcWOaHQRo5oM3CvnHki7xPIlVLKMf2ccMVhmE+KJB1vlE+xVi/DOAykSDuPK/3J2w9hGlVqGjVa6k97qmQjK+mXOnKI7pbM8FpfgNdrY7xwU17js0+Reo2co9P/wAO+zW/4TegVR222y3C4Wo8nvQcoiepI+yNTY23HRUm1+3TMM80abRUINyT3QRqGxrdU+2du1cRTNfMBRFKrmpj6rsh1nxA8fK2prd0eXFdnH/G3NfElqL9s8Y2lQZiHktDKVdxk083+DVn61J5MNJ+wTB+qdGiiq03NcWuBa4GCCIIPAg6LoKkDI7vNH+k7y0/dofmuwxpIDagFRoENJMPaBoGv1AH2TLeSsPNIaFIdhwb0zm/dIh48vrfyzzhR0JBCEIASIQgBCEIAQhCAfV8Tup90xPq+J3U+6YgBAQgIBU6nqmrrQF0YReYYkNgfrqnMpZj7lGDbaf0VOw4G7XkPzWKTPQjHRKweCpNvObodD8k59GT3XAH7Jj3G9RKlQ/vH9efuuFSoBMDKfn5qnDbNCwkXGz8REsqiQDEEwQeIN4/twV3SFMQ+m4X46EjceBWMol0i9+HL71No1iOU+h8t6qsrfovhJPs3X7BSrS5gubub4TmBvbj03qKMI6kQRNj63Ag/wBQHkVU7N2g+mcrrbgfKW33/gtZnbWpXPigyOI1/XIKhr0w8x/BM2LtJzDOaQNPn+IW62btBtVnkvMdoYd1Fpfq23q6B7n5LQdl8UcscvXir/HulCXF9GXyKYzjzRuiLfeotR+8ahLgnOey+t7ey5F/G3nC9eMso8vGGZrau0Bg63xjm+FVjdZjxqCRuOo6FRO0+OqYmlTqYdxlzsrgLACLEuGk6Rvnkr6vkcHNc0ODpDmkSCqWlhKdIn4OZm4tMkev4qibl0npnqeNbBYk18y/6/ZW0Oz3wsG4VWNfXrPYO73vhsa4OOUkSTAvA374Wzp9ncIcJ+zhmUVGAPLfEeMlwPppyUPCbULRETbcP7K1puL6b3OIDcpgzlg9Qu6ox9dnHl22Tg+T957769fY+V+12Gp0sZXp02OYxtVwY10EhoMN01tfzVOrDb7CMRVk5pe7vWvc3sSq5WnmiroaxPi73XX11XJKgAwhCEAJEqRACEiVACEIQD63id1PumJ9bxO6n3TEAIQhAKpODF1GVhs1skDiuZPCOoLMkXIdYC08d/orHAYCoRo4g8BAXbZewnOmQ5pFxIjN6/rrotZhcIMuR0jdIJHQ3u0z14yvJu8iMdI9mul4yzPDs2SM+YbjaIg777hpy8jE/CdlWnV0kiQSJuLxv6LY7OwjMkOAJnXSbRJjebT9ymjAgAjdqJuR5rL8aclplvyxfRgj2feJiCLEQJkHi087G9vaFUwNWS00iGkxpmAduJGoF/Fpe69AfhrzEakHrqmMY0wSL29RbfxC4XkyT+Y74Ra0Yp+ynhoLg3dIbItOukXnfylSMBQqsJDDI4Ewd1jNjbf5rZN2ZmIdG8QQYvqAQoYpGlWNN+aN0tlpvYTuP5Lp28ltEJNaTOlBhq03Uqgg7weov0UrZ+A+CyQZLQBC6UwAIN2jhqOA6fgp1Cm0gNnWx4q2DiZp8iTgdrBobO8xvJ8gArHa9MwKgFvrKjxGyTLIdqfQfr71odn1oaGuM23r0qJSxiR590Y9xKY1eEeVkhoix3/r1U3GbPAJcw+Wn90/CYQnxFXYbZWppIi4PB5i05QN/DdwWa+k3tq3C0zhqRGctuYzBoNtPfl5TedstujA0C5vi3CxdzME3svnftTtZ+IqF9S7j9bQ74niOHCIOiuisIrlLkynxjiXEkNveWgQeYhcEspEIBKkCVACEIQAkKVIUAiVCEAIQhAdK3id1PumQrZ+yqpqFuUgyfdWWE7MVTcgibX4qqV0I9suh49kvRmMh4ILSvQMJ2SO+IPyIU5vYVjuRVH/ANtZc/CmuzzSlRc4wFuOyXZl2YPc1rhwdI9tVa4LsaaTgdb/ANitlg9mhn1BI3lUX+dFrES6rw5ReWNw+y2tAGQ8oJEchBXSps8tFgfPvFTi+LAQeF59UV6r4mR5D9SvKm0z0IOSKrCVS0zax0Mz6cPNW+ExvdsAZPHQfcqypRDok75nQwJj2UNmMNMuHjB0J4b9FUvlZe4c0aKvVJB7kcp9VVtqxEkcL/IrvhsVUee7ki9jum2t72T69N2WHEFgF7yW84KmXzbOIrjokYSpLS2ZGo4j8vxU51QHxQSBEHUiFVsOSxuQBwB/A/kplKqHgXkg7xBXUH69nE4+zqKNF9gIPp0Kc/ClsEDNzGqhixJM3mDIi3BS6OJixN92vXRSmn/kjlprpkyk5xAEDl1XTBO78PsR7p2HyuuCNF1oVXB2V7RO524r0abMYTPPthnOCa2kCuppCE6gDvXTE0MzC0bxC9WDyedJYPBPpO7Wv+K/DhzHNB1gONtZBYIPnP3+Y1MU52txe3Cd44dNLLd/Sd2SrYeqahc97TfMcztd2bKGj+GSd9l56QrGQhEiVIoJBKkSoAQhCAEhSpEAIQhACEIQHszWMc8uA0Pop+Crtu0skT1E/cubNnFrrOurLZuzh3pN98fJfM/M2fSy+GkIzC0n95gc3lNjH3pwa5jgSDH1T9yk1cJkgjQ7ua7l2YAQI58t65cV77OVN+to60cY0t8MjnrC60cYwX3Gyi4V4MRI/LVNrMymPNTzmlk44Rbwdy8F06wuxwYcJH63hVuWTa3JSsM9zRrb8FVGze0dyjrTIuJwBgg3G4fd0VNVwr8ok5YIFmjw8lr/AIs6jVcn4YPsV1xT6Jja49mYqYQiD8QkHdoDb3VphTmsT3jvuJtZS6uFAtOghc/gEkQYIA6KHFo6+IpI64SAC2oQSIgwRHdEhDNmudmcx0NJaRJuCLRyHNRqjy03A5EKdSqyBa5tMqU03s4eVtHH4Tw0g+LhvIG8HQpCwEQRDo1vut6q4LA2Ce91Uetg2OAc0RrAJNuMQrJV6OI2oh4HGOaYcDyAgk8wdfI3WgweID2wdOO8Kjp4cOtvjy1E8weal7MBjP6jjFtd/VKnKLwc3RjJZLmhTqNMTI6qxoPdvVfQxEiw8iplHE8l6dEor2eZapPtFf2uwjKmHfndTYA0y94kNtrI06r5W29hqbKjvh1W1hPjaCGnjEgZuoAX1tjyajCAYPP8iPdeC/St2fqUz8d9RjhOUQzvk31cTpZekpJrRkxg8vSJxCHCI53UgRCEIAQhCAEiVIgBCEIAQhCA/9k=</string>
    <string name="zadanie1">Zadanie_1</string>
    <string name="zadanie2">Zadanie_2</string>
    <string name="zadanie3">Zadanie_3</string>
    <string name="zadanie4">Zadanie_4</string>
    <string name="zadanie5">Zadanie_5</string>
    <string name="zadanie6">Zadanie_6</string>
    <string name="zadanie7">Zadanie_7</string>
    <string name="zadanie8">Zadanie_8</string>
    <string name="zadanie9">Zadanie_9</string>
    <string name="zadanie10">Zadanie_10</string>
    <string name="zadanie11">Zadanie_11</string>
    <string name="zadanie12">Zadanie_12</string>
    <string name="zadanie13">Zadanie_13</string>
    <string name="zadanie14">Zadanie_14</string>
    <string name="zadanie15">Zadanie_15</string>
    <string name="zadanie16">Zadanie_16</string>




</resources>