<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/task"
            android:title="@string/zadanie1" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/task"
            android:title="@string/zadanie2" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/task"
            android:title="@string/zadanie3" />
        <item
            android:id="@+id/task4"
            android:icon="@drawable/task"
            android:title="@string/zadanie4" />
        <item
            android:id="@+id/task5"
            android:icon="@drawable/task"
            android:title="@string/zadanie5" />
        <item
            android:id="@+id/task6"
            android:icon="@drawable/task"
            android:title="@string/zadanie6" />
        <item
            android:id="@+id/task7"
            android:icon="@drawable/task"
            android:title="@string/zadanie7" />
        <item
            android:id="@+id/task8"
            android:icon="@drawable/task"
            android:title="@string/zadanie8" />
        <item
            android:id="@+id/task9"
            android:icon="@drawable/task"
            android:title="@string/zadanie9" />
        <item
            android:id="@+id/task10"
            android:icon="@drawable/task"
            android:title="@string/zadanie10" />
        <item
            android:id="@+id/task11"
            android:icon="@drawable/task"
            android:title="@string/zadanie11" />
        <item
            android:id="@+id/task12"
            android:icon="@drawable/task"
            android:title="@string/zadanie12" />
        <item
            android:id="@+id/task13"
            android:icon="@drawable/task"
            android:title="@string/zadanie13" />
        <item
            android:id="@+id/task14"
            android:icon="@drawable/task"
            android:title="@string/zadanie14" />
        <item
            android:id="@+id/task15"
            android:icon="@drawable/task"
            android:title="@string/zadanie15" />
        <item
            android:id="@+id/task16"
            android:icon="@drawable/task"
            android:title="@string/zadanie16" />

    </group>
</menu>